--- a/domain.com/css/wbol.css
+++ b/domain.com/css/wbol.css
@@ -19,9 +19,9 @@ a {color:inherit; text-decoration:none;}
 .wbolSelected {background-color:var(--special) !important; color:#ffffff !important; border-color:var(--special) !important;}
 
 .wbolCaption {color:var(--special);}
-.wbolHeader {}
-.wbolFooter {}
-.wbolPager {}
+/*.wbolHeader {}*/
+/*.wbolFooter {}*/
+/*.wbolPager {}*/
 
 .wbolACNaN {color:#b0b0b0;}
 .wbolAC0 {color:#b0b0b0; text-decoration:line-through;}
