--- a/public/css/stw.css
+++ b/public/css/stw.css
@@ -80,17 +80,17 @@ li.stwPage::before {font-family: "Font Awesome 5 Free"; font-weight: 900; conten
 li.stwContent::before {font-family: "Font Awesome 5 Free"; font-weight: 900; content: "\f0c8";}
 li.stwReference::before {font-family: "Font Awesome 5 Free"; font-weight: 900; content: "\f0c1";}
 
-li.stwBreadcrumbs::before {font-family: "Font Awesome 5 Free"; font-weight: 900; content: "\f101";}
-li.stwCalendar::before {font-family: "Font Awesome 5 Free"; font-weight: 900; content: "\f073";}
-li.stwChart::before {font-family: "Font Awesome 5 Free"; font-weight: 900; content: "\f080";}
-li.stwForm::before {font-family: "Font Awesome 5 Free"; font-weight: 900; content: "\f2bb";}
-li.stwHyperimage::before {font-family: "Font Awesome 5 Free"; font-weight: 900; content: "\f2bb";}
-li.stwKeypad::before {font-family: "Font Awesome 5 Free"; font-weight: 900; content: "\f11c";}
-li.stwList::before {font-family: "Font Awesome 5 Free"; font-weight: 900; content: "\f03a";}
-li.stwMap::before {font-family: "Font Awesome 5 Free"; font-weight: 900; content: "\f279";}
-li.stwMenu::before {font-family: "Font Awesome 5 Free"; font-weight: 900; content: "\f0c9";}
-li.stwScript::before {font-family: "Font Awesome 5 Free"; font-weight: 900; content: "\f121";}
-li.stwTable::before {font-family: "Font Awesome 5 Free"; font-weight: 900; content: "\f0ce";}
-li.stwTabs::before {font-family: "Font Awesome 5 Free"; font-weight: 900; content: "\f24d";}
-li.stwText::before {font-family: "Font Awesome 5 Free"; font-weight: 900; content: "\f031";}
-li.stwTree::before {font-family: "Font Awesome 5 Free"; font-weight: 900; content: "\f1bb";}
+li.stwBreadcrumbsIcon::before {font-family: "Font Awesome 5 Free"; font-weight: 900; content: "\f101";}
+li.stwCalendarIcon::before {font-family: "Font Awesome 5 Free"; font-weight: 900; content: "\f073";}
+li.stwChartIcon::before {font-family: "Font Awesome 5 Free"; font-weight: 900; content: "\f080";}
+li.stwFormIcon::before {font-family: "Font Awesome 5 Free"; font-weight: 900; content: "\f2bb";}
+li.stwHyperimageIcon::before {font-family: "Font Awesome 5 Free"; font-weight: 900; content: "\f2bb";}
+li.stwKeypadIcon::before {font-family: "Font Awesome 5 Free"; font-weight: 900; content: "\f11c";}
+li.stwListIcon::before {font-family: "Font Awesome 5 Free"; font-weight: 900; content: "\f03a";}
+li.stwMapIcon::before {font-family: "Font Awesome 5 Free"; font-weight: 900; content: "\f279";}
+li.stwMenuIcon::before {font-family: "Font Awesome 5 Free"; font-weight: 900; content: "\f0c9";}
+li.stwScriptIcon::before {font-family: "Font Awesome 5 Free"; font-weight: 900; content: "\f121";}
+li.stwTableIcon::before {font-family: "Font Awesome 5 Free"; font-weight: 900; content: "\f0ce";}
+li.stwTabsIcon::before {font-family: "Font Awesome 5 Free"; font-weight: 900; content: "\f24d";}
+li.stwTextIcon::before {font-family: "Font Awesome 5 Free"; font-weight: 900; content: "\f031";}
+li.stwTreeIcon::before {font-family: "Font Awesome 5 Free"; font-weight: 900; content: "\f1bb";}
