Fixed Group element behavior, addressed button actions

--- a/public/css/wboler.css
+++ b/public/css/wboler.css
@@ -18,6 +18,7 @@
  .stwFormIcn::before {font-family: "Font Awesome 5 Free"; font-weight: 900; content: "\f2bb";}
  .stwHyperimageIcn::before {font-family: "Font Awesome 5 Free"; font-weight: 900; content: "\f2bb";}
  .stwKeypadIcn::before {font-family: "Font Awesome 5 Free"; font-weight: 900; content: "\f11c";}
+ .stwLanguagesIcn::before {font-family: "Font Awesome 5 Free"; font-weight: 900; content: "\f024";}
  .stwListIcn::before {font-family: "Font Awesome 5 Free"; font-weight: 900; content: "\f03a";}
  .stwMapIcn::before {font-family: "Font Awesome 5 Free"; font-weight: 900; content: "\f279";}
  .stwMenuIcn::before {font-family: "Font Awesome 5 Free"; font-weight: 900; content: "\f0c9";}
