--- a/public/css/stw.css
+++ b/public/css/stw.css
@@ -32,7 +32,7 @@ article.stwContent {position:relative; padding:0.25em; border: thin dashed trans
 .stwList li {padding: 0.25em; margin: 0;}
 .stwList li:hover {background-color: var(--special); color: var(--back);}
 
-.stwTabs ul {list-style-type:none; margin:0; padding:0;}
+.stwTabs {list-style-type:none; margin:0; padding:0;}
 .stwTabLabel {display:inline-block; padding:0.5em 1em; border:1px solid #f0f0f0; border-bottom:0; border-radius:0.5em 0.5em 0 0; min-width:1em; margin:0 0 0 0.25em; text-align:center; cursor:pointer; background-color:#f0f0f0;}
 .stwTabLabel:hover {background-color:#ffffff; color:#000000;}
 .stwTab {position:relative; border:1px solid #f0f0f0;}
